Add 3 lab